--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Majeure ML Ingesup
+title: Majeure ML Ingésup
 subtitle: Majeure Machine Learning Ingésup
 description: |
     Ce site contient toutes les ressources associées à la Majeure Machine Learning donnée de Novembre à Décembre 2018 à Ingésup Bordeaux.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://majeure-machinelearning-ingesup.github.io" # the base hostname & protocol for your site
-syllabus: "https://github.com/svmiller/svm-r-markdown-templates/blob/master/svm-rmarkdown-syllabus-example.pdf"
+syllabus: 
 githubdir: "ClementRomac/majeure-machinelearning-ingesup.github.io"
 
 # Author/user information
 email: "clement[dot]romac[at]ynov[dot]com pierre[dot]leroy[at]ynov[dot]com"
-twitter_username: 
-github_username:  
-authorurl: ""
+twitter_username:
+github_username: 
+authorurl: 
 address:
 
 # Build settings
