--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -46,7 +46,7 @@
 - title: "Chapitre 5 : Méthodologie"
   filename: 5.4
   dirname: slides
-  tldr: "Méthodologies à mettre en place pour un porjet de Deep Learning."
+  tldr: "Méthodologies à mettre en place pour un projet de Deep Learning."
 
 - title: "Chapitre 6 : Biais et interprétabilité"
   filename: 5.4
